# visual-computing

Assignment-1/: CMakeLists.txt  README.md  main.cpp
Assignment-1/report/: Assignment-1-Report.md
Assignment-1/src/: Evaluator.cpp  FeatureDetector.cpp  FeatureMatcher.cpp  HomographyEstimator.cpp  ImageWarper.cpp  PanoramaStitcher.cpp
Assignment-1/src/include/: Evaluator.hpp  FeatureDetector.hpp  FeatureMatcher.hpp  HomographyEstimator.hpp  ImageWarper.hpp  PanoramaStitcher.hpp
